--- a/src/components/manage/SubscriptionsPanel/subscriptions-panel.css
+++ b/src/components/manage/SubscriptionsPanel/subscriptions-panel.css
@@ -35,18 +35,18 @@
   font-weight: 300;
 }
 
-.confirm-delete-item:not(:last-of-type) {
+#page-subscriptions .confirm-delete-item:not(:last-of-type) {
   margin-bottom: 0.75rem;
 }
 
-.confirm-delete-item {
+#page-subscriptions .confirm-delete-item {
   font-weight: 600;
 }
 
-.ui.dimmer .ui.workaround.loader:before {
+#page-subscriptions .ui.dimmer .ui.workaround.loader:before {
   border-color: rgba(0, 0, 0, 0.1);
 }
 
-.ui.dimmer .ui.workaround.loader:after {
+#page-subscriptions .ui.dimmer .ui.workaround.loader:after {
   border-color: #767676 transparent transparent;
 }
